force-app/main/default/objects/Trade_In__c/Trade_In__c.object-meta.xml
<CustomObject>
    <label>Trade In/Buy In</label>
    <nameField>
        <displayFormat>TI{00000000}</displayFormat>
        <label>Trade In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Ins/Buy Ins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>