force-app/main/default/objects/Trade_In__c/fields/Accepted_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted By Customer</label>
    <type>Checkbox</type>
</CustomField>