force-app/main/default/objects/Trade_In__c/fields/Actual_Cash_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cash_Value__c</fullName>
    <inlineHelpText>Sales Manager to enter the actual amount that we are paying for the trade in</inlineHelpText>
    <label>Actual Cash Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>