force-app/main/default/objects/Trade_In__c/fields/ACV_Manager__c.field-meta.xml
<CustomField>
    <fullName>ACV_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACV Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trade_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>