force-app/main/default/objects/Trade_In__c/fields/Additional_comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments__c</fullName>
    <description>Additional comments</description>
    <label>Additional comments</label>
    <type>TextArea</type>
</CustomField>