force-app/main/default/objects/Trade_In__c/fields/Air_Brakes__c.field-meta.xml
<CustomField>
    <fullName>Air_Brakes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Brakes</label>
    <type>Checkbox</type>
</CustomField>