force-app/main/default/objects/Trade_In__c/fields/Air_Conditioner_Running__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioner_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Conditioner Running</label>
    <type>Checkbox</type>
</CustomField>