force-app/main/default/objects/Trade_In__c/fields/All_Declarations_entered_into_IDS__c.field-meta.xml
<CustomField>
    <fullName>All_Declarations_entered_into_IDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Declarations entered into IDS</label>
    <type>Checkbox</type>
</CustomField>