force-app/main/default/objects/Trade_In__c/fields/All_Maintenance_Current__c.field-meta.xml
<CustomField>
    <fullName>All_Maintenance_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Maintenance Current</label>
    <type>Checkbox</type>
</CustomField>