force-app/main/default/objects/Trade_In__c/fields/Allowance__c.field-meta.xml
<CustomField>
    <fullName>Allowance__c</fullName>
    <inlineHelpText>Your Sales Manager will fill in the optimal price to offer for the trade in. Same as the Appraised Value.</inlineHelpText>
    <label>Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>