force-app/main/default/objects/Trade_In__c/fields/Appraisal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraisal Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trade_Ins1</relationshipName>
    <type>Lookup</type>
</CustomField>