force-app/main/default/objects/Trade_In__c/fields/Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value__c</fullName>
    <inlineHelpText>Your Sales Manager will fill in the amount that will be shown to the customer as the value they are getting for their trade in</inlineHelpText>
    <label>Appraised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>