force-app/main/default/objects/Trade_In__c/fields/Aqua_Hot_Floor__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Hot_Floor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqua Hot Floor</label>
    <type>Checkbox</type>
</CustomField>