force-app/main/default/objects/Trade_In__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Trade_Ins</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>