force-app/main/default/objects/Trade_In__c/fields/Awning__c.field-meta.xml
<CustomField>
    <fullName>Awning__c</fullName>
    <label>Awning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Fair_Poor</valueSetName>
    </valueSet>
</CustomField>