force-app/main/default/objects/Trade_In__c/fields/Bearings_Repacked__c.field-meta.xml
<CustomField>
    <fullName>Bearings_Repacked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bearings Repacked</label>
    <type>Checkbox</type>
</CustomField>