force-app/main/default/objects/Trade_In__c/fields/Bearings_Repacked_Date__c.field-meta.xml
<CustomField>
    <fullName>Bearings_Repacked_Date__c</fullName>
    <label>Bearings Repacked Date</label>
    <type>Date</type>
</CustomField>