force-app/main/default/objects/Trade_In__c/fields/Body_Damage__c.field-meta.xml
<CustomField>
    <fullName>Body_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Damage</label>
    <type>Checkbox</type>
</CustomField>