force-app/main/default/objects/Trade_In__c/fields/Body_Paint__c.field-meta.xml
<CustomField>
    <fullName>Body_Paint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Paint</label>
    <type>Checkbox</type>
</CustomField>