force-app/main/default/objects/Trade_In__c/fields/Brakes_Redone__c.field-meta.xml
<CustomField>
    <fullName>Brakes_Redone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brakes Redone</label>
    <type>Checkbox</type>
</CustomField>