force-app/main/default/objects/Trade_In__c/fields/Brakes_Redone_Date__c.field-meta.xml
<CustomField>
    <fullName>Brakes_Redone_Date__c</fullName>
    <label>Brakes Redone Date</label>
    <type>Date</type>
</CustomField>