force-app/main/default/objects/Trade_In__c/fields/Chassis_Extended_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Extended_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chassis Extended Warranty</label>
    <type>Checkbox</type>
</CustomField>