force-app/main/default/objects/Trade_In__c/fields/Coach_Extended_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Coach_Extended_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coach Extended Warranty</label>
    <type>Checkbox</type>
</CustomField>