force-app/main/default/objects/Trade_In__c/fields/Condition_of_Jacks__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_Jacks__c</fullName>
    <label>Condition of Jacks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Fair_Poor</valueSetName>
    </valueSet>
</CustomField>