force-app/main/default/objects/Trade_In__c/fields/Customer_Acknowleges_Declaration_Info_Tr__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acknowleges_Declaration_Info_Tr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Acknowleges Declaration Info Tr</label>
    <type>Checkbox</type>
</CustomField>