force-app/main/default/objects/Trade_In__c/fields/Damages_Over_2000__c.field-meta.xml
<CustomField>
    <fullName>Damages_Over_2000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damages Over $2000</label>
    <type>Checkbox</type>
</CustomField>