force-app/main/default/objects/Trade_In__c/fields/Dash_A_C_Works__c.field-meta.xml
<CustomField>
    <fullName>Dash_A_C_Works__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dash A/C Works</label>
    <type>Checkbox</type>
</CustomField>