force-app/main/default/objects/Trade_In__c/fields/Date_of_Last_Reseal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Reseal__c</fullName>
    <label>Date of Last Reseal</label>
    <type>Date</type>
</CustomField>