force-app/main/default/objects/Trade_In__c/fields/Dual_Pane_Windows__c.field-meta.xml
<CustomField>
    <fullName>Dual_Pane_Windows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Pane Windows</label>
    <type>Checkbox</type>
</CustomField>