force-app/main/default/objects/Trade_In__c/fields/Electric_Awning__c.field-meta.xml
<CustomField>
    <fullName>Electric_Awning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric Awning</label>
    <type>Checkbox</type>
</CustomField>