force-app/main/default/objects/Trade_In__c/fields/Engine_Brake__c.field-meta.xml
<CustomField>
    <fullName>Engine_Brake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engine Brake</label>
    <type>Checkbox</type>
</CustomField>