force-app/main/default/objects/Trade_In__c/fields/Ever_Rental_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>Ever_Rental_or_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ever Rental or Lease</label>
    <type>Checkbox</type>
</CustomField>