force-app/main/default/objects/Trade_In__c/fields/Exhaust_Manifolds__c.field-meta.xml
<CustomField>
    <fullName>Exhaust_Manifolds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhaust / Manifolds</label>
    <type>Checkbox</type>
</CustomField>