force-app/main/default/objects/Trade_In__c/fields/Exterior_Vinyl_Protection__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Vinyl_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exterior Vinyl Protection</label>
    <type>Checkbox</type>
</CustomField>