force-app/main/default/objects/Trade_In__c/fields/Fantastic_Fans__c.field-meta.xml
<CustomField>
    <fullName>Fantastic_Fans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fantastic Fans</label>
    <type>Checkbox</type>
</CustomField>