force-app/main/default/objects/Trade_In__c/fields/Fiberglass_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Fiberglass_Exterior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fiberglass Exterior</label>
    <type>Checkbox</type>
</CustomField>