force-app/main/default/objects/Trade_In__c/fields/Floors_Stains__c.field-meta.xml
<CustomField>
    <fullName>Floors_Stains__c</fullName>
    <label>Floors (Stains)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Fair_Poor</valueSetName>
    </valueSet>
</CustomField>