force-app/main/default/objects/Trade_In__c/fields/Fridge_Freezer_Ice__c.field-meta.xml
<CustomField>
    <fullName>Fridge_Freezer_Ice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Icemaker</label>
    <type>Checkbox</type>
</CustomField>