force-app/main/default/objects/Trade_In__c/fields/Furnace_Running__c.field-meta.xml
<CustomField>
    <fullName>Furnace_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnace Running</label>
    <type>Checkbox</type>
</CustomField>