force-app/main/default/objects/Trade_In__c/fields/Generator_Hours__c.field-meta.xml
<CustomField>
    <fullName>Generator_Hours__c</fullName>
    <label>Generator Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>