force-app/main/default/objects/Trade_In__c/fields/Generator_Size__c.field-meta.xml
<CustomField>
    <fullName>Generator_Size__c</fullName>
    <label>Generator Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>