force-app/main/default/objects/Trade_In__c/fields/Heated_Tanks__c.field-meta.xml
<CustomField>
    <fullName>Heated_Tanks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heated Tanks</label>
    <type>Checkbox</type>
</CustomField>