force-app/main/default/objects/Trade_In__c/fields/Holding_Tanks_Leaking__c.field-meta.xml
<CustomField>
    <fullName>Holding_Tanks_Leaking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holding Tanks Leaking</label>
    <type>Checkbox</type>
</CustomField>