force-app/main/default/objects/Trade_In__c/fields/ICBC_Windshield_Claim__c.field-meta.xml
<CustomField>
    <fullName>ICBC_Windshield_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICBC Windshield Claim</label>
    <type>Checkbox</type>
</CustomField>