force-app/main/default/objects/Trade_In__c/fields/Insurance_Damage_Claims__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Damage_Claims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Damage Claims</label>
    <type>Checkbox</type>
</CustomField>