force-app/main/default/objects/Trade_In__c/fields/Interior_Fabric_Leather_Vinyl__c.field-meta.xml
<CustomField>
    <fullName>Interior_Fabric_Leather_Vinyl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interior Fabric/Leather/Vinyl</label>
    <type>Checkbox</type>
</CustomField>