force-app/main/default/objects/Trade_In__c/fields/Inverter__c.field-meta.xml
<CustomField>
    <fullName>Inverter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inverter</label>
    <type>Checkbox</type>
</CustomField>