force-app/main/default/objects/Trade_In__c/fields/Inverter_Size__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Size__c</fullName>
    <label>Inverter Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>