force-app/main/default/objects/Trade_In__c/fields/Levelling_System__c.field-meta.xml
<CustomField>
    <fullName>Levelling_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Levelling System</label>
    <type>Checkbox</type>
</CustomField>