force-app/main/default/objects/Trade_In__c/fields/Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lien_Amount__c</fullName>
    <inlineHelpText>Entered by the Business Office, this is the amount of any outstanding loan on the trade in unit</inlineHelpText>
    <label>Lien Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>