force-app/main/default/objects/Trade_In__c/fields/Lived_In__c.field-meta.xml
<CustomField>
    <fullName>Lived_In__c</fullName>
    <label>Lived In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>