force-app/main/default/objects/Trade_In__c/fields/Manual_Awning__c.field-meta.xml
<CustomField>
    <fullName>Manual_Awning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Awning</label>
    <type>Checkbox</type>
</CustomField>