force-app/main/default/objects/Trade_In__c/fields/Mechanical_Repairs_Over_2000__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Repairs_Over_2000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mechanical Repairs Over $2000</label>
    <type>Checkbox</type>
</CustomField>