force-app/main/default/objects/Trade_In__c/fields/Mechanical_Step__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mechanical Step</label>
    <type>Checkbox</type>
</CustomField>