force-app/main/default/objects/Trade_In__c/fields/Microwave__c.field-meta.xml
<CustomField>
    <fullName>Microwave__c</fullName>
    <label>Microwave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Microwave_Types</valueSetName>
    </valueSet>
</CustomField>