force-app/main/default/objects/Trade_In__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>