force-app/main/default/objects/Trade_In__c/fields/Mileage_Type__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Type__c</fullName>
    <label>Mileage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mileage_Type</valueSetName>
    </valueSet>
</CustomField>