force-app/main/default/objects/Trade_In__c/fields/Moisture_Leaks__c.field-meta.xml
<CustomField>
    <fullName>Moisture_Leaks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moisture (Leaks)</label>
    <type>Checkbox</type>
</CustomField>