force-app/main/default/objects/Trade_In__c/fields/Motor_Type__c.field-meta.xml
<CustomField>
    <fullName>Motor_Type__c</fullName>
    <label>Motor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gas_or_Diesel</valueSetName>
    </valueSet>
</CustomField>