force-app/main/default/objects/Trade_In__c/fields/Number_of_Air_Conditioners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Air_Conditioners__c</fullName>
    <label>Number of Air Conditioners</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>