force-app/main/default/objects/Trade_In__c/fields/Number_of_Hydraulic_Jacks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hydraulic_Jacks__c</fullName>
    <label>Number of Hydraulic Jacks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>