force-app/main/default/objects/Trade_In__c/fields/Number_of_Solar_Panels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Solar_Panels__c</fullName>
    <label>Number of Solar Panels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>