force-app/main/default/objects/Trade_In__c/fields/Original_Ownership_Number_of_Years__c.field-meta.xml
<CustomField>
    <fullName>Original_Ownership_Number_of_Years__c</fullName>
    <label>Original Ownership Number of Years</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>