force-app/main/default/objects/Trade_In__c/fields/Outstanding_Recalls__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Recalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstanding Recalls</label>
    <type>Checkbox</type>
</CustomField>