force-app/main/default/objects/Trade_In__c/fields/Pets__c.field-meta.xml
<CustomField>
    <fullName>Pets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pets</label>
    <type>Checkbox</type>
</CustomField>