force-app/main/default/objects/Trade_In__c/fields/Power_Step__c.field-meta.xml
<CustomField>
    <fullName>Power_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power Step</label>
    <type>Checkbox</type>
</CustomField>