force-app/main/default/objects/Trade_In__c/fields/Private_Windshield_Claim__c.field-meta.xml
<CustomField>
    <fullName>Private_Windshield_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Windshield Claim</label>
    <type>Checkbox</type>
</CustomField>