force-app/main/default/objects/Trade_In__c/fields/Propane_Tanks_C_D__c.field-meta.xml
<CustomField>
    <fullName>Propane_Tanks_C_D__c</fullName>
    <label>Propane Tanks C.D.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>