force-app/main/default/objects/Trade_In__c/fields/Refrigerator_Running__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refrigerator Running</label>
    <type>Checkbox</type>
</CustomField>