force-app/main/default/objects/Trade_In__c/fields/Refrigerator_Size__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Size__c</fullName>
    <label>Refrigerator Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>