force-app/main/default/objects/Trade_In__c/fields/Registered_out_of_Province__c.field-meta.xml
<CustomField>
    <fullName>Registered_out_of_Province__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered out of Province</label>
    <type>Checkbox</type>
</CustomField>