force-app/main/default/objects/Trade_In__c/fields/Retail_Value__c.field-meta.xml
<CustomField>
    <fullName>Retail_Value__c</fullName>
    <inlineHelpText>Not usually entered at Trade In stage but this is the amount the Sales Manager will enter as the selling price when
the trade in is ready for Sales</inlineHelpText>
    <label>Retail Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>