force-app/main/default/objects/Trade_In__c/fields/Satellite_Dish__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Dish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satellite Dish</label>
    <type>Checkbox</type>
</CustomField>