force-app/main/default/objects/Trade_In__c/fields/Self_Condition_of_Appliances__c.field-meta.xml
<CustomField>
    <fullName>Self_Condition_of_Appliances__c</fullName>
    <description>Customer self assessment of working conditions of appliances</description>
    <label>Self - Condition of Appliances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Fair_Poor</valueSetName>
    </valueSet>
</CustomField>