force-app/main/default/objects/Trade_In__c/fields/Serial_Number_Verified__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serial Number Verified</label>
    <type>Checkbox</type>
</CustomField>