force-app/main/default/objects/Trade_In__c/fields/Size_of_Propane_Tanks__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Propane_Tanks__c</fullName>
    <label>Size of Propane Tanks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>