force-app/main/default/objects/Trade_In__c/fields/Slide_s__c.field-meta.xml
<CustomField>
    <fullName>Slide_s__c</fullName>
    <label>Slide(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Fair_Poor</valueSetName>
    </valueSet>
</CustomField>