force-app/main/default/objects/Trade_In__c/fields/Slide_Topper_Awning__c.field-meta.xml
<CustomField>
    <fullName>Slide_Topper_Awning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slide Topper Awning</label>
    <type>Checkbox</type>
</CustomField>