force-app/main/default/objects/Trade_In__c/fields/Smoke_Free__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Free__c</fullName>
    <label>Smoke Free</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>