force-app/main/default/objects/Trade_In__c/fields/Stove_Oven__c.field-meta.xml
<CustomField>
    <fullName>Stove_Oven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stove / Oven</label>
    <type>Checkbox</type>
</CustomField>