force-app/main/default/objects/Trade_In__c/fields/Stove_Oven_Type__c.field-meta.xml
<CustomField>
    <fullName>Stove_Oven_Type__c</fullName>
    <label>Stove / Oven Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stove_Oven_Type</valueSetName>
    </valueSet>
</CustomField>