force-app/main/default/objects/Trade_In__c/fields/Tail_Head_Lights__c.field-meta.xml
<CustomField>
    <fullName>Tail_Head_Lights__c</fullName>
    <label>Tail / Head Lights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Fair_Poor</valueSetName>
    </valueSet>
</CustomField>