force-app/main/default/objects/Trade_In__c/fields/Test_Drive_Required__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Drive Required</label>
    <type>Checkbox</type>
</CustomField>