force-app/main/default/objects/Trade_In__c/fields/Tin_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Tin_Exterior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tin Exterior</label>
    <type>Checkbox</type>
</CustomField>