force-app/main/default/objects/Trade_In__c/fields/Tire_Condition__c.field-meta.xml
<CustomField>
    <fullName>Tire_Condition__c</fullName>
    <label>Tire Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Fair_Poor</valueSetName>
    </valueSet>
</CustomField>