force-app/main/default/objects/Trade_In__c/fields/Trade_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Trade_Arrival_Date_Time__c</fullName>
    <label>Trade Arrival Date Time</label>
    <type>DateTime</type>
</CustomField>