force-app/main/default/objects/Trade_In__c/fields/Trade_In_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Type__c</fullName>
    <label>Trade In Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motorized</fullName>
            </value>
            <value>
                <fullName>Non-Motorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>