force-app/main/default/objects/Trade_In__c/fields/Water_Heater__c.field-meta.xml
<CustomField>
    <fullName>Water_Heater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Heater</label>
    <type>Checkbox</type>
</CustomField>