force-app/main/default/objects/Trade_In__c/fields/Water_Heater_Running__c.field-meta.xml
<CustomField>
    <fullName>Water_Heater_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Heater Running</label>
    <type>Checkbox</type>
</CustomField>