force-app/main/default/objects/Trade_In__c/fields/Windshield_Damage__c.field-meta.xml
<CustomField>
    <fullName>Windshield_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windshield Damage</label>
    <type>Checkbox</type>
</CustomField>