force-app/main/default/objects/Trade_In__c/recordTypes/Motorized.recordType-meta.xml
<RecordType>
    <fullName>Motorized</fullName>
    <active>true</active>
    <label>Motorized</label>
</RecordType>