force-app/main/default/objects/Trade_In__c/recordTypes/Non_Motorized.recordType-meta.xml
<RecordType>
    <fullName>Non_Motorized</fullName>
    <active>true</active>
    <label>Non-Motorized</label>
</RecordType>