force-app/main/default/objects/Trade_In__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accepted_By_Customer__c</columns>
    <columns>Allowance__c</columns>
    <columns>Appraisal_Date__c</columns>
    <columns>Trade_Arrival_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>